@@ -2,6 +2,11 @@
 VERSION 0.6.4cvs
 ================
 
+2005-03-14  Vincent Richard  <vincent@vincent-richard.net>
+
+ * removed singleton<> and singletonManager classes: useless and quite
+   confusing in Doxygen-generated documentation.
+
 2005-02-06  Vincent Richard  <vincent@vincent-richard.net>
 
  * mailboxList.{cpp|hpp}: dropped protected inheritance which was not
